Add all rotation locks