@@ -6,7 +6,6 @@ import com.ctre.phoenix6.swerve.SwerveModule;
 import com.ctre.phoenix6.swerve.SwerveRequest.FieldCentricFacingAngle;
 import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.geometry.Translation2d;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -16,17 +15,17 @@ import org.supurdueper.robot2025.FieldConstants;
 public class FieldCentricFacingReef extends FieldCentricFacingAngle {
 
     Translation2d reefCenterBlue = FieldConstants.Reef.center;
-    final List<Rotation2d> reefAngles = Arrays.asList(new Rotation2d[] {
+    final List<Rotation2d> reefAngles = List.of(
         Rotation2d.kZero,
         new Rotation2d(Math.PI / 3),
         new Rotation2d(2 * Math.PI / 3),
         Rotation2d.kPi,
         new Rotation2d(4 * Math.PI / 3),
         new Rotation2d(5 * Math.PI / 3)
-    });
+    );
 
     public FieldCentricFacingReef() {
-        this.HeadingController.setPID(10, 0, .75);
+        HeadingController.setPID(10, 0, .75);
     }
 
     @Override
@@ -34,13 +33,12 @@ public class FieldCentricFacingReef extends FieldCentricFacingAngle {
         Translation2d reefCenter = AllianceFlip.apply(reefCenterBlue);
         Rotation2d facingReefCenter =
                 reefCenter.minus(parameters.currentPose.getTranslation()).getAngle();
-
         TargetDirection =
                 Collections.min(reefAngles, Comparator.comparing(angle -> absDistanceRadians(angle, facingReefCenter)));
         if (ForwardPerspective == ForwardPerspectiveValue.OperatorPerspective) {
             // This is an angle from the frame of the reference of the field. Subtract
             // the operator persepctive to counteract CTRE adding it later
-            TargetDirection = this.TargetDirection.minus(parameters.operatorForwardDirection);
+            TargetDirection = TargetDirection.minus(parameters.operatorForwardDirection);
         }
         return super.apply(parameters, modulesToApply);
     }
